--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -31,7 +31,7 @@ $font-size-large:			$font-size-base * 1.6; 				// 24px
 $font-size-medium:			$font-size-base * 1.33;				// 20px
 $font-size-base: 			15px;								// 15px
 $font-size-small:			$font-size-base * 0.85; 			// 13px
-$font-size-xsmall:			$font-size-base * 0.8; 			// 11px
+$font-size-xsmall:			$font-size-base * 0.8; 				// 11px
 $text-shadow-image: 		0 2px 10px rgba(0, 0, 0, 0.1);
 
 /* etiquetas */
@@ -99,6 +99,18 @@ ul
 .caret
 {
 	margin: 0 0 0 8px;
+}
+.filters-tags
+{
+	background-color: $color-gray;
+	color: white;
+	font-weight: 600;
+	position: relative;
+
+	.fa-remove
+	{
+		text-align: right;
+	}
 }
 .font-bold
 {
@@ -287,6 +299,29 @@ ul
 			background-color: white;
 		}
 	}
+}
+.show-all
+{
+	border-top: 1px solid $color-light-gray;
+	color: $color-gray;
+	display: block;
+	font-size: $font-size-small;
+	margin: 10px 0;
+	padding: 5px 0 0 0;
+
+	&:focus,
+	&:hover
+	{
+		color: $color-main-gray;
+	}
+}
+.tag
+{
+	border: 0;
+	border-radius: $border-radius-small;
+	display: inline-block;
+	margin: 5px 5px 5px 0;
+	padding: 5px 30px 5px 10px;
 }
 .text-bold
 {
