--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -146,9 +146,9 @@ ul
 			border: none;
 			margin: 0 0 10px 0;
 		}
-		label.title-third
+		.title-third
 		{
-			margin: 15px 0 10px 0;
+			margin: 15px 0 10px 0 !important;
 		}
 	}
 }
