--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -5,17 +5,17 @@
 </div><!--/.heading-->
 <section id="normativa" class="container">
     <div class="row">
-        <form role="form" id="normativa-search" class="col-md-9 col-sm-12 form-inline form-lg">
-            <div class="form-group col-md-12 col-sm-12">
-                <div class="col-md-10 col-sm-9">
+        <form role="form" id="normativa-search" class="col-md-9 col-xs-12 form-inline form-lg">
+            <div class="form-group col-md-12 col-xs-12">
+                <div class="col-md-10 col-xs-9">
                     <input type="text" class="form-control" id="normativa-input-search" placeholder="Escriba aquí su búsqueda" />
                 </div>
-                <button class="btn btn-warning btn-lg pull-right col-md-2 col-sm-3" type="submit" value="Buscar" >Buscar</button>
+                <button class="btn btn-warning btn-lg pull-right col-md-2 col-xs-3" type="submit" value="Buscar" >Buscar</button>
             </div>
         </form><!--/#normativa-search-->
     </div>
     <div class="row">
-        <aside id="normativa-filters" class="col-md-3 col-sm-12 pull-right">
+        <aside id="normativa-filters" class="col-md-3 col-xs-12 pull-right">
             <form role="form" id="normativa-filters" class="form-base">
             <fieldset>
                 <legend class="title-secondary">Filtrar resultados</legend>
@@ -26,126 +26,132 @@
                     <button class="tag filters-tags">Filtro años 1 <i class="fa fa-remove"></i></button>
                     <a href="#" title="Mostrar todos" class="show-all">mostrar todos (+20)</a>
                 </section><!--/#normativa-filters-tags-->
-                <div class="form-group">
-                    <h4 class="title-third">Estado</h4>
-                    <label class="title-fifth">
-                        <input type="checkbox"> Consolidadas en DJA
-                    </label>
-                    <label class="title-fifth">
-                        <input type="checkbox"> En proceso de consolidación
-                    </label>
-                </div>
-                <div class="form-group">
-                    <label for="filters-categorias" class="title-third">Categoría</label>
-                    <select class="form-control">
-                        <option value="0">Todas</option>
-                        <option value="1">ADM – Administrativo</option>
-                        <option value="2">ACU – Cultura, Ciencia y Tecnología</option>
-                        <option value="3">AED – Educación</option>
-                        <option value="4">ASA – Salud Pública</option>
-                        <option value="5">ASE – Seguridad</option>
-                        <option value="6">ASO – Acción y Desarrollo Social</option>
-                        <option value="7">B – Aduanero</option>
-                        <option value="8">C – Aeronáutico-Espacial</option>
-                        <option value="9">D – Bancario, Monetario y Financiero</option>
-                        <option value="10">E – Civil</option>
-                        <option value="11">F – Comercial</option>
-                        <option value="12">G – Comunitario</option>
-                        <option value="13">H – Constitucional</option>
-                        <option value="14">I – De la Comunicación</option>
-                        <option value="15">J – Diplomático y Consular</option>
-                        <option value="16">K – Económico</option>
-                        <option value="17">L – Impositivo</option>
-                        <option value="18">M – Industrial</option>
-                        <option value="19">N – Internacional Privado</option>
-                        <option value="20">O – Internacional Público</option>
-                        <option value="21">P – Laboral</option>
-                        <option value="22">Q – Medio Ambiente</option>
-                        <option value="23">R – Militar</option>
-                        <option value="24">S – Penal</option>
-                        <option value="25">T – Político</option>
-                        <option value="26">U – Procesal Civil y Comercial</option>
-                        <option value="27">V – Procesal Penal</option>
-                        <option value="28">W – Público Provincial y Municipal</option>
-                        <option value="29">X – Recursos Naturales</option>
-                        <option value="30">Y – Seguridad Social</option>
-                        <option value="31">Z – Transporte y Seguros</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="filters-tema" class="title-third">Tema</label>
-                    <select class="form-control">
-                        <option value="0">Todos</option>
-                        <option value="1">Tema 1</option>
-                        <option value="2">Tema 2</option>
-                        <option value="3">Tema 3</option>
-                        <option value="4">Tema 4</option>
-                        <option value="5">Tema 5</option>
-                        <option value="6">Tema 6</option>
-                        <option value="7">Tema 7</option>
-                        <option value="8">Tema 8</option>
-                        <option value="9">Tema 9</option>
-                        <option value="10">Tema 10</option>
-                        <option value="11">Tema 11</option>
-                        <option value="12">Tema 12</option>
-                        <option value="13">Tema 13</option>
-                        <option value="14">Tema 14</option>
-                        <option value="15">Tema 15</option>
-                        <option value="16">Tema 16</option>
-                        <option value="17">Tema 17</option>
-                        <option value="18">Tema 18</option>
-                        <option value="19">Tema 19</option>
-                        <option value="20">Tema 20</option>
-                        <option value="21">Tema 21</option>
-                        <option value="22">Tema 22</option>
-                        <option value="23">Tema 23</option>
-                        <option value="24">Tema 24</option>
-                        <option value="25">Tema 25</option>
-                        <option value="26">Tema 26</option>
-                        <option value="27">Tema 27</option>
-                        <option value="28">Tema 28</option>
-                        <option value="29">Tema 29</option>
-                        <option value="30">Tema 30</option>
-                        <option value="31">Tema 31</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="filters-fecha-sancion" class="title-third">Fecha de sanción</label>
+                <div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="form-group col-md-12 col-xs-6">
+                            <label for="filters-categorias" class="title-third">Categoría</label>
                             <select class="form-control">
-                                <option value="0" disabled selected>Desde</option>
-                                <option value="1">2014</option>
-                                <option value="2">2013</option>
-                                <option value="3">2012</option>
-                                <option value="4">2011</option>
-                                <option value="5">2010</option>
-                                <option value="6">2009</option>
-                                <option value="7">2008</option>
-                                <option value="8">2007</option>
-                                <option value="9">2006</option>
+                                <option value="0">Todas</option>
+                                <option value="1">ADM – Administrativo</option>
+                                <option value="2">ACU – Cultura, Ciencia y Tecnología</option>
+                                <option value="3">AED – Educación</option>
+                                <option value="4">ASA – Salud Pública</option>
+                                <option value="5">ASE – Seguridad</option>
+                                <option value="6">ASO – Acción y Desarrollo Social</option>
+                                <option value="7">B – Aduanero</option>
+                                <option value="8">C – Aeronáutico-Espacial</option>
+                                <option value="9">D – Bancario, Monetario y Financiero</option>
+                                <option value="10">E – Civil</option>
+                                <option value="11">F – Comercial</option>
+                                <option value="12">G – Comunitario</option>
+                                <option value="13">H – Constitucional</option>
+                                <option value="14">I – De la Comunicación</option>
+                                <option value="15">J – Diplomático y Consular</option>
+                                <option value="16">K – Económico</option>
+                                <option value="17">L – Impositivo</option>
+                                <option value="18">M – Industrial</option>
+                                <option value="19">N – Internacional Privado</option>
+                                <option value="20">O – Internacional Público</option>
+                                <option value="21">P – Laboral</option>
+                                <option value="22">Q – Medio Ambiente</option>
+                                <option value="23">R – Militar</option>
+                                <option value="24">S – Penal</option>
+                                <option value="25">T – Político</option>
+                                <option value="26">U – Procesal Civil y Comercial</option>
+                                <option value="27">V – Procesal Penal</option>
+                                <option value="28">W – Público Provincial y Municipal</option>
+                                <option value="29">X – Recursos Naturales</option>
+                                <option value="30">Y – Seguridad Social</option>
+                                <option value="31">Z – Transporte y Seguros</option>
                             </select>
                         </div>
-                        <div class="col-md-6">
+                        <div class="form-group col-md-12 col-xs-6">
+                            <label for="filters-tema" class="title-third">Tema</label>
                             <select class="form-control">
-                                <option value="0" disabled selected>Hasta</option>
-                                <option value="1">2014</option>
-                                <option value="2">2013</option>
-                                <option value="3">2012</option>
-                                <option value="4">2011</option>
-                                <option value="5">2010</option>
-                                <option value="6">2009</option>
-                                <option value="7">2008</option>
-                                <option value="8">2007</option>
-                                <option value="9">2006</option>
+                                <option value="0">Todos</option>
+                                <option value="1">Tema 1</option>
+                                <option value="2">Tema 2</option>
+                                <option value="3">Tema 3</option>
+                                <option value="4">Tema 4</option>
+                                <option value="5">Tema 5</option>
+                                <option value="6">Tema 6</option>
+                                <option value="7">Tema 7</option>
+                                <option value="8">Tema 8</option>
+                                <option value="9">Tema 9</option>
+                                <option value="10">Tema 10</option>
+                                <option value="11">Tema 11</option>
+                                <option value="12">Tema 12</option>
+                                <option value="13">Tema 13</option>
+                                <option value="14">Tema 14</option>
+                                <option value="15">Tema 15</option>
+                                <option value="16">Tema 16</option>
+                                <option value="17">Tema 17</option>
+                                <option value="18">Tema 18</option>
+                                <option value="19">Tema 19</option>
+                                <option value="20">Tema 20</option>
+                                <option value="21">Tema 21</option>
+                                <option value="22">Tema 22</option>
+                                <option value="23">Tema 23</option>
+                                <option value="24">Tema 24</option>
+                                <option value="25">Tema 25</option>
+                                <option value="26">Tema 26</option>
+                                <option value="27">Tema 27</option>
+                                <option value="28">Tema 28</option>
+                                <option value="29">Tema 29</option>
+                                <option value="30">Tema 30</option>
+                                <option value="31">Tema 31</option>
                             </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-12 col-sm-6">
+                            <h4 class="title-third">Estado</h4>
+                            <label class="title-fifth">
+                                <input type="checkbox"> Consolidadas en DJA
+                            </label>
+                            <label class="title-fifth">
+                                <input type="checkbox"> En proceso de consolidación
+                            </label>
+                        </div>
+                        <div class="form-group col-md-12 col-sm-6">
+                            <label for="filters-fecha-sancion" class="title-third">Fecha de sanción</label>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <select class="form-control">
+                                        <option value="0" disabled selected>Desde</option>
+                                        <option value="1">2014</option>
+                                        <option value="2">2013</option>
+                                        <option value="3">2012</option>
+                                        <option value="4">2011</option>
+                                        <option value="5">2010</option>
+                                        <option value="6">2009</option>
+                                        <option value="7">2008</option>
+                                        <option value="8">2007</option>
+                                        <option value="9">2006</option>
+                                    </select>
+                                </div>
+                                <div class="col-sm-6">
+                                    <select class="form-control">
+                                        <option value="0" disabled selected>Hasta</option>
+                                        <option value="1">2014</option>
+                                        <option value="2">2013</option>
+                                        <option value="3">2012</option>
+                                        <option value="4">2011</option>
+                                        <option value="5">2010</option>
+                                        <option value="6">2009</option>
+                                        <option value="7">2008</option>
+                                        <option value="8">2007</option>
+                                        <option value="9">2006</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </fieldset>
             </form>
         </aside>
-        <div class="col-md-9 pull-left">
+        <div class="col-md-9 col-xs-12 pull-left">
             <section id="normativa-main">
                 <div class="nav-path-header">
                     <p class="text-p"><strong>20.789</strong> resultados para <strong>"trabajo infantil en escuelas públicas"</strong></p>
