cambios sin cambios

--- a/app/styles/_normativa.scss
+++ b/app/styles/_normativa.scss
@@ -4,8 +4,25 @@
 /* etiquetas
 
 
-/* id */
+	/* id */
 
+	#normativa-input-search{
+		padding:0 ; 
+		.angucomplete-holder{
+			height: 100%;
+			padding: 0 ;
+			#normativa-input-search_dropdown{
+
+			}
+			margin-top: 0;
+			position:relative;
+			#normativa-input-search_value{
+				height: 100%;
+				padding: 0 0 0 1%; 
+			}
+		}	
+	}
+	
 
 /* clases */
 
