--- a/app/styles/_ley.scss
+++ b/app/styles/_ley.scss
@@ -2,7 +2,7 @@
 
 /* etiquetas */
 
-main
+/*main
 {
     display: block;
 }
@@ -13,14 +13,14 @@ p
 ul
 {
     list-style-type: none;
-}
+}*/
 
 /* ids */
 
 
 /* clases */
 
-.article-num
+/*.article-num
 {
     font-weight: 700;
     text-transform: uppercase;
@@ -192,3 +192,4 @@ ul
 {
     border-bottom: 1px dotted #555;
 }
+*/
