--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
                 <article id ="jumbo-info" class="col-md-8">
-                    <h1 class="title-primary">Digesto Jurídico Argentino</h1>
+                    <h1 class="title-heading">Digesto Jurídico Argentino</h1>
                     <p class="text-p">El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. </p>
                 </article>
                 <div class="col-md-4">
