--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -27,13 +27,13 @@ $navbar-height: 			64px;
 
 $font-family-primary: 		'PT Sans', sans-serif;
 $font-family-secondary: 	'PT Serif', serif;
-$font-size-xxlarge:			2.5em;							// 40px
-$font-size-xlarge:			2em; 							// 32px
-$font-size-large:			1.5em; 							// 24px
-$font-size-medium:			1.25em;							// 20px
-$font-size-base: 			16px;							// 16px
-$font-size-small:			0.875em; 						// 13px
-$font-size-xsmall:			0.6875em; 						// 11px
+$font-size-xxlarge:			$font-size-base * 2.86;							
+$font-size-xlarge:			$font-size-base * 2.145; 							
+$font-size-large:			$font-size-base * 1.5; 							
+$font-size-medium:			$font-size-base * 1.25;							
+$font-size-base: 			16px;											
+$font-size-small:			$font-size-base * 0.875; 						
+$font-size-xsmall:			$font-size-base * 0.6875; 						
 $text-shadow-image: 		0 2px 10px rgba(0, 0, 0, 0.1);
 
 /* etiquetas */
@@ -340,12 +340,12 @@ ul
 .title-heading
 {
 	font-size: $font-size-xxlarge !important;
-	font-weight: 400;
+	font-weight: 700;
 }
 .title-primary
 {
 	font-size: $font-size-xxlarge !important;
-	font-weight: 700;
+	font-weight: 400;
 }
 .title-secondary
 {
