--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -17,13 +17,11 @@
 			color: white;
 			text-shadow: $text-shadow-image;
 		}
-		.title-primary
+		.title-heading
 		{
-			color: white;
-			font-weight: 700;
+			color: white !important;
 			margin: 20px 0 0 0;
 			padding: 15px 0;
-			text-align: left;
 		}
 	}
 	.btn
