--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,4 +11,4 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 // Font Awesome 4.2.0
 
-@import "font-awesome-4.2.0/scss/font-awesome.scss";
+//@import "font-awesome-4.2.0/scss/font-awesome.scss";
