--- a/app/partials/autocomplete.html
+++ b/app/partials/autocomplete.html
@@ -1,7 +1,9 @@
-<div class="autocomplete-container">
+<div class="autocomplete-container dropdown">
 	<input type="text" class="form-control" id="normativa-input-search" placeholder="Escriba aquí su búsqueda" ng-model="textoBusqueda" ng-enter="buscarPorSugerencia()" ng-keyup="buscarSugerencia()"/>
-	<ul ng-repeat="sugerencia en sugerencias" class= "autocomplete-sugestions-list">
-	    <li class="autocomplete-sugestion-item" ng-click="textoBusqueda = {{sugerencia}}">{{sugerencia}}</li>
+	<ul class= " autocomplete-sugestions-list" role="menu">
+	    <li ng-repeat="sugerencia in sugerencias" role="presentation" class="autocomplete-sugestion-item" >
+	    	<p ng-click="sugerenciaSeleccionada('{{sugerencia}}')" role="menuitem">{{sugerencia}}</p>
+	    </li>
 	</ul>
 </div>
                 
