--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,11 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "_consultas.scss";
 @import "_landing.scss";
 
+
+//autocomplete styles 
+@import "_autocomplete.scss";
+
+
 // Font Awesome 4.2.0
 
 @import "font-awesome-4.2.0/scss/font-awesome.scss";
