--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -155,7 +155,7 @@
         <div class="col-md-9 col-xs-12 pull-left">
             <section id="normativa-main">
                 <div class="nav-path-header" ng-show="showResult">
-                    <p class="text-p"><strong>{{respuestas.length}}</strong> resultados para <strong>"{{textoBusqueda}}"</strong></p>
+                    <p class="text-p"><strong>{{resultadosTotales}}</strong> resultados para <strong>"{{textoBusqueda}}"</strong></p>
                 </div>
                 <section id="normativa-main-list">
 
