--- a/app/views/consultas.html
+++ b/app/views/consultas.html
@@ -92,9 +92,20 @@
                         <input type="text" class="form-control" id="norma-a-consultar" placeholder="Ej.: ACU-0191"/>
                      </div>
                   </div>
-                  <div class="form-group">
-                     <label for="adjuntar-archivo" class="title-third">Adjuntar archivo</label>
-                     <input type="file" id="adjuntar-archivo" class="btn btn-warning" placeholder="Adjuntar archivo" />
+                  <div id="file-upload" class="form-group">
+                     <div class="row">
+                        <div class="col-md-6">
+                           <button type="file" id="adjuntar-archivo" class="btn btn-warning btn-lg" placeholder="Adjuntar archivo">Adjuntar archivo</button>
+                        </div>
+                        <div class="col-md-6">
+                           <p>nombre_del_archivo_cargado.docx</p>
+                        </div>
+                     </div><!--/.row-->
+                     <div class="progress progress-striped active">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                           <span class="sr-only">45% completado</span>
+                        </div>
+                     </div><!--/.progress-bar-->
                   </div>
                </div>
                <div class="col-md-6">
