--- a/app/views/normativa.html
+++ b/app/views/normativa.html
@@ -21,7 +21,10 @@
             <fieldset>
                 <legend class="title-secondary">Filtrar resultados</legend>
                 <section id="normativa-filters-tags" class="filters">
-                    <button class="tag filters-tags">Filtro categoría 1 <i class="fa fa-remove"></i></button>
+                    <button class="tag filters-tags" ng-repeat="filtro in filtros">Filtro categoría 1 <i class="fa fa-remove"></i></button>
+
+
+
                     <button class="tag filters-tags">Filtro categoría 2 <i class="fa fa-remove"></i></button>
                     <button class="tag filters-tags">Tema 1 <i class="fa fa-remove"></i></button>
                     <button class="tag filters-tags">Filtro años 1 <i class="fa fa-remove"></i></button>
@@ -31,77 +34,18 @@
                     <div class="row">
                         <div class="form-group col-md-12 col-xs-6">
                             <label for="filters-categorias" class="title-third">Categoría</label>
-                            <select class="form-control">
-                                <option value="0">Todas</option>
-                                <option value="1">ADM – Administrativo</option>
-                                <option value="2">ACU – Cultura, Ciencia y Tecnología</option>
-                                <option value="3">AED – Educación</option>
-                                <option value="4">ASA – Salud Pública</option>
-                                <option value="5">ASE – Seguridad</option>
-                                <option value="6">ASO – Acción y Desarrollo Social</option>
-                                <option value="7">B – Aduanero</option>
-                                <option value="8">C – Aeronáutico-Espacial</option>
-                                <option value="9">D – Bancario, Monetario y Financiero</option>
-                                <option value="10">E – Civil</option>
-                                <option value="11">F – Comercial</option>
-                                <option value="12">G – Comunitario</option>
-                                <option value="13">H – Constitucional</option>
-                                <option value="14">I – De la Comunicación</option>
-                                <option value="15">J – Diplomático y Consular</option>
-                                <option value="16">K – Económico</option>
-                                <option value="17">L – Impositivo</option>
-                                <option value="18">M – Industrial</option>
-                                <option value="19">N – Internacional Privado</option>
-                                <option value="20">O – Internacional Público</option>
-                                <option value="21">P – Laboral</option>
-                                <option value="22">Q – Medio Ambiente</option>
-                                <option value="23">R – Militar</option>
-                                <option value="24">S – Penal</option>
-                                <option value="25">T – Político</option>
-                                <option value="26">U – Procesal Civil y Comercial</option>
-                                <option value="27">V – Procesal Penal</option>
-                                <option value="28">W – Público Provincial y Municipal</option>
-                                <option value="29">X – Recursos Naturales</option>
-                                <option value="30">Y – Seguridad Social</option>
-                                <option value="31">Z – Transporte y Seguros</option>
+
+
+                            <select ng-model="categoriaActual" ng-options="categoria.nombre  for categoria in categorias" class="form-control"  ng-change="agregarfiltroCategoria()">
+                                <option value="" selected disabled>TODAS </option>
                             </select>
+                           
                         </div>
                         <div class="form-group col-md-12 col-xs-6">
                             <label for="filters-tema" class="title-third">Tema</label>
-                            <select class="form-control">
-                                <option value="0">Todos</option>
-                                <option value="1">Tema 1</option>
-                                <option value="2">Tema 2</option>
-                                <option value="3">Tema 3</option>
-                                <option value="4">Tema 4</option>
-                                <option value="5">Tema 5</option>
-                                <option value="6">Tema 6</option>
-                                <option value="7">Tema 7</option>
-                                <option value="8">Tema 8</option>
-                                <option value="9">Tema 9</option>
-                                <option value="10">Tema 10</option>
-                                <option value="11">Tema 11</option>
-                                <option value="12">Tema 12</option>
-                                <option value="13">Tema 13</option>
-                                <option value="14">Tema 14</option>
-                                <option value="15">Tema 15</option>
-                                <option value="16">Tema 16</option>
-                                <option value="17">Tema 17</option>
-                                <option value="18">Tema 18</option>
-                                <option value="19">Tema 19</option>
-                                <option value="20">Tema 20</option>
-                                <option value="21">Tema 21</option>
-                                <option value="22">Tema 22</option>
-                                <option value="23">Tema 23</option>
-                                <option value="24">Tema 24</option>
-                                <option value="25">Tema 25</option>
-                                <option value="26">Tema 26</option>
-                                <option value="27">Tema 27</option>
-                                <option value="28">Tema 28</option>
-                                <option value="29">Tema 29</option>
-                                <option value="30">Tema 30</option>
-                                <option value="31">Tema 31</option>
-                            </select>
+                             <select ng-model="temaActual" ng-options="tema.nombre  for tema in temas" class="form-control" >
+                                  <option value="" selected disabled>TODOS </option>
+                             </select>
                         </div>
                     </div>
                     <div class="row">
@@ -118,31 +62,15 @@
                             <label for="filters-fecha-sancion" class="title-third">Fecha de sanción</label>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <select class="form-control">
-                                        <option value="0" disabled selected>Desde</option>
-                                        <option value="1">2014</option>
-                                        <option value="2">2013</option>
-                                        <option value="3">2012</option>
-                                        <option value="4">2011</option>
-                                        <option value="5">2010</option>
-                                        <option value="6">2009</option>
-                                        <option value="7">2008</option>
-                                        <option value="8">2007</option>
-                                        <option value="9">2006</option>
+                                   <select ng-model="fechaDesde" ng-options="fecha  for fecha in fechas" class="form-control" >
+                                         <option value="" selected disabled>Desde </option>
+                                        
                                     </select>
                                 </div>
                                 <div class="col-sm-6">
-                                    <select class="form-control">
-                                        <option value="0" disabled selected>Hasta</option>
-                                        <option value="1">2014</option>
-                                        <option value="2">2013</option>
-                                        <option value="3">2012</option>
-                                        <option value="4">2011</option>
-                                        <option value="5">2010</option>
-                                        <option value="6">2009</option>
-                                        <option value="7">2008</option>
-                                        <option value="8">2007</option>
-                                        <option value="9">2006</option>
+                                    <select ng-model="fechaHasta" ng-options="fecha  for fecha in fechas" class="form-control" >
+                                        <option value="" disabled selected>Hasta</option>
+                                       
                                     </select>
                                 </div>
                             </div>
